[project]
name = "estruturar-projeto-de-dados"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinicius Duzanski",email = "viniciusduzanski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocstrings-python (>=1.16.12,<2.0.0)",
    "pygments (>=2.19.2,<3.0.0)",
    "mkdocs-material (>=9.6.15,<10.0.0)",
    "pymdown-extensions (>=10.16,<11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
kill = "kill -9 $(lsof -t -i :8000)"
doc = "mkdocs serve"

[tool.poetry]
package-mode = false